--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "debugpy",
             "request": "launch",
             "program": "${file}",
-            "args": "-rr -g -i",
+            "args": "-g -i -a",
             "console": "integratedTerminal"
         }
     ]
