old_ik_solver update - bugfixes (init position, reseting) - merged with new ik solver

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "debugpy",
             "request": "launch",
             "program": "${file}",
-            "args": "",
+            "args": "-g -a -i -e",
             "console": "integratedTerminal",
             "justMyCode": False
         }
