old solver bugfix - verbobse added, urdf wrist limits updted, angle error corrected - wrist angle WIP

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "debugpy",
             "request": "launch",
             "program": "${file}",
-            "args": "-g -a -i -e",
+            "args": " -i -e -rr",
             "console": "integratedTerminal",
             "justMyCode": False
         }
