urdf updated, hnd angles rescaled, nicorad2deg WIP

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "debugpy",
             "request": "launch",
             "program": "${file}",
-            "args": " -i -e -rr",
+            "args": " -i -e ",
             "console": "integratedTerminal",
             "justMyCode": False
         }
