calibration grid - IK solver 3D calibrtion

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "debugpy",
             "request": "launch",
             "program": "${file}",
-            "args": " -i -e -a -rr",
+            "args": " -v -g -c",
             "console": "integratedTerminal",
             "justMyCode": False
         }
